Fix cropperjs to run smoothly on add product page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -804,6 +804,36 @@ h5 {
   display: none;
 }
 
+.preview-button {
+  position: absolute;
+  top: 10px;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.delete-button {
+  right: 10px;
+  font-size: 0.9rem;
+  color: var(--dark-color);
+  background-color: var(--gradient-neutral);
+}
+
+.delete-button:hover {
+  background-color: #e1e1e1;
+}
+
+.edit-button {
+  left: 10px;
+  color: var(--dark-color);
+  background-color: var(--gradient-neutral);
+}
+
+.edit-button:hover {
+  background-color: #e1e1e1;
+}
+
 .preview-image {
   width: 100%;
   height: 100%;
@@ -874,23 +904,13 @@ h5 {
   max-width: 500px;
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
 .btn-row {
   display: flex;
   flex-direction: row;
+}
+
+.modal-close:hover {
+  opacity: 0.6;
 }
 
 /* OTHER */
